--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 	
 	<title>My Game</title>
 
-	<script src="/socket.io/socket.io.js"></script>
+	<!-- <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script> -->
+	<script src="static/lib/socket.io.min.js"></script>
 	<!-- <script type="text/javascript">
 		var socket = io.connect('http://' + document.domain + ':' + location.port)
 	
