--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
 	
 	<title>My Game</title>
 
-	<script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
-<!-- 	<script src="static/lib/socket.io.min.js"></script> -->
-	<!-- <script type="text/javascript">
-		var socket = io.connect('http://' + document.domain + ':' + location.port)
+	<!-- <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script> -->
+	<script src="static/lib/socket.io.min.js"></script>
 	
-	</script> -->
 
 	<script src="static/lib/phaser.min.js"></script>
 	<script src="static/src/scenes/Level.js"></script>
