--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
 	
 
 	<script src="static/lib/phaser.min.js"></script>
+	<script src="static/src/stateMachine/StateMachine.js"></script>
+	<script src="static/src/scenes/PlayerController.js"></script>
 	<script src="static/src/scenes/Level.js"></script>
 	<script src="static/src/main.js"></script>
 
