Changed to Lukas sprites

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,15 @@
 	
 	<title>My Game</title>
 
-<!-- 	<script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>  -->
-	<script src="static/lib/socket.io.min.js"></script>
+	<script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+	<!-- <script src="static/lib/socket.io.min.js"></script> -->
 	
 
 	<script src="static/lib/phaser.min.js"></script>
+	<script src="static/src/Player.js"></script>
+	<script src="static/src/Opponent.js"></script>
 	<script src="static/src/stateMachine/StateMachine.js"></script>
-	<script src="static/src/scenes/PlayerController.js"></script>
+	<script src="static/src/stateMachine/PlayerController.js"></script>
 	<script src="static/src/scenes/Level.js"></script>
 	<script src="static/src/main.js"></script>
 
