Just ignore the nameform stuff :(

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
 	<script src="static/src/Opponent.js"></script>
 	<script src="static/src/stateMachine/StateMachine.js"></script>
 	<script src="static/src/stateMachine/PlayerController.js"></script>
+	<script src="static/src/scenes/TitleScreen.js"></script>
 	<script src="static/src/scenes/Level.js"></script>
 	<script src="static/src/main.js"></script>
 
