--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
 	<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+	<!-- <link rel="preload" as="font" href="static/assets/html/prstartk.ttf" type="font/ttf" /> -->
 	
 	<title>My Game</title>
 
